recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:5: error: type mismatch;
 found   : Unit
 required: Int
  if (l.tail != Nil)
  ^